--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
     "expo-font": "^13.0.3",
     "expo-linking": "~7.0.5",
     "expo-router": "~4.0.17",
+    "expo-screen-orientation": "^8.0.4",
     "expo-status-bar": "~2.0.1",
     "expo-video": "~2.0.5",
     "postcss": "^8.5.2",
