--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
     "web": "expo start --web"
   },
   "dependencies": {
+    "@react-navigation/native": "^7.0.14",
     "autoprefixer": "^10.4.20",
     "babel-preset-expo": "^12.0.7",
     "expo": "~52.0.32",
