added refresh component to refetch in Profile tab

--- a/example.env
+++ b/example.env
@@ -1,3 +1,5 @@
+// to describe the structure of env
+
 APPWRITE_ENDPOINT=https://cloud.appwrite.io/v1
 APPWRITE_PLATFORM=your_platform_name
 APPWRITE_PROJECT_ID=your_project_id
